<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
  	<groupId>ml.sabotage</groupId>
 	<artifactId>sabotage</artifactId>
 	<version>1.0.2</version>
	<packaging>jar</packaging>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<relocations>
								<relocation>
									<pattern>dev.rosewood.rosegarden</pattern>
									<shadedPattern>ml.sabotage.libs.rosegarden</shadedPattern>
								</relocation>
							</relocations>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

  	<repositories>
    	<repository>
        	<id>spigot-repo</id>
        	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    	</repository>
		<repository>
			<id>everything</id>
			<url>https://repo.citizensnpcs.co/</url>
		</repository>
		<repository>
			<id>akiradev-repo</id>
			<url>https://repo.akiradev.xyz/repository/Public</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>rosewood-repo</id>
			<url>https://repo.rosewooddev.io/repository/public/</url>
		</repository>
		<repository>
			<id>dv8tion</id>
			<name>m2-dv8tion</name>
			<url>https://m2.dv8tion.net/releases</url>
		</repository>
		<repository>
			<id>Scarsz-Nexus</id>
			<url>https://nexus.scarsz.me/content/groups/public/</url>
		</repository>
	</repositories>

 	<dependencies>
  		<dependency>
			<groupId>net.citizensnpcs</groupId>
			<artifactId>citizens-main</artifactId>
			<version>2.0.30-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mcmonkey</groupId>
			<artifactId>sentinel</artifactId>
			<version>2.7.0-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>*</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.1</version>
			<scope>provided</scope>
		</dependency>
  		<dependency>
        	<groupId>org.spigotmc</groupId>
           	<artifactId>spigot-api</artifactId>
           	<version>1.18.2-R0.1-SNAPSHOT</version>
           	<scope>provided</scope>
    	</dependency>
    	<dependency>
	    	<groupId>ml.zer0dasho</groupId>
	  		<artifactId>corpseimmortal</artifactId>
	 		<version>1.0.0</version>
	 		<scope>provided</scope>
    	</dependency>
    	<dependency>
			<groupId>ml.zer0dasho</groupId>
			<artifactId>config</artifactId>
			<version>1.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.rosewood</groupId>
			<artifactId>rosegarden</artifactId>
			<version>1.1.0.42-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.discordsrv</groupId>
			<artifactId>discordsrv</artifactId>
			<version>1.25.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
  
</project>